Fixed layout issues

--- a/OP4/Software/Front-end/style.css
+++ b/OP4/Software/Front-end/style.css
@@ -68,7 +68,8 @@ a {
 /* Toggle */
 
 #toggle {
-	padding: 5px;
+	padding: 10px;
+	padding-right: 0px;
 }
 
 .switch {
